--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -2,31 +2,41 @@
   {{ title }}
 </h2>
 
-<ng-template #loading>
-  <h2 class="loading">Loading</h2>
-</ng-template>
-
-<ul class="products" *ngIf="products$ | async as products;else loading">
-  <li *ngFor="let product of products | slice:start:end"
-    [class.discontinued]="product.discontinued"
-    [class.selected]="product === selectedProduct"
-    (click)="onSelect(product)">
-    <span class="name">{{ product.name | uppercase }}</span>
-    <span class="description">{{ product.description }}</span>
-    <span class="price">{{ product.price | currency }}</span>
-  </li>
-</ul>
-
-<div class="right">
-  <a routerLink="insert">Add new product...</a>
+<!-- Error! -->
+<div *ngIf="errorMessage" class="errorMessage">
+  {{ errorMessage }}
 </div>
 
-<div>
-  <button (click)="previousPage()" [disabled]="start == 0">
-    < Previous Page
-  </button>
-  Page {{ pageNumber }}
-  <button (click)="nextPage()">
-    Next Page >
-  </button>
+<!-- No error -->
+<div *ngIf="!errorMessage">
+
+  <ng-template #loading>
+    <h2 class="loading">Loading</h2>
+  </ng-template>
+
+  <ul class="products" *ngIf="products$ | async as products;else loading">
+    <li *ngFor="let product of products | slice:start:end"
+      [class.discontinued]="product.discontinued"
+      [class.selected]="product === selectedProduct"
+      (click)="onSelect(product)">
+      <span class="name">{{ product.name | uppercase }}</span>
+      <span class="description">{{ product.description }}</span>
+      <span class="price">{{ product.price | currency }}</span>
+    </li>
+  </ul>
+
+  <div class="right">
+    <a routerLink="insert">Add new product...</a>
+  </div>
+
+  <div>
+    <button (click)="previousPage()" [disabled]="start == 0">
+      < Previous Page
+    </button>
+    Page {{ pageNumber }}
+    <button (click)="nextPage()">
+      Next Page >
+    </button>
+  </div>
+
 </div>
