OrderBy custom pipe

--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -14,8 +14,13 @@
     <h2 class="loading">Loading</h2>
   </ng-template>
 
+  Sort by:
+  <button (click)="sortList('price')">Price</button>
+  <button (click)="sortList('name')">Name</button>
+  <button (click)="sortList('modifiedDate')">Date</button>
+
   <ul class="products" *ngIf="products$ | async as products;else loading">
-    <li *ngFor="let product of products | slice:start:end"
+    <li *ngFor="let product of products | orderBy:[sorter] | slice:start:end"
       [class.discontinued]="product.discontinued"
       [class.selected]="product === selectedProduct"
       (click)="onSelect(product)">
